# tamis

./: CMakeLists.txt  README  opcode.c  opcode.h  pretty_bt.c  tamis.c  tamis.h  tamis_test.c
doc/: Makefile  tamis.tex
tests/: test1.c  test1.sh  test2.c  test2.sh  test3.c  test3.sh  test4.c  test4.sh
